# luban

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
examples/plugins/: README.md
examples/plugins/friday-tracing/: __init__.py  plugin.toml
examples/plugins/hello-plugin/: __init__.py  plugin.toml
src/agentkit/: __init__.py  audit.py  cleanup.py  events.py
src/agentkit/cli/: app.py  i18n.py  renderer.py  tui.py  tui_renderer.py  wizard.py
src/agentkit/config/: __init__.py  defaults.py  loader.py  models.py
src/agentkit/context/: injector.py  loader.py  watcher.py
src/agentkit/cron/: __init__.py  job.py  scheduler.py  store.py
src/agentkit/dashboard/: __init__.py  server.py  template.py
src/agentkit/media/: __init__.py  audio.py  detector.py  image.py  processor.py  video.py
src/agentkit/memory/: long_term.py  manager.py  prompts.py  short_term.py  store.py
src/agentkit/model/: client.py  embedder.py  types.py
src/agentkit/orchestration/: loop.py  reminders.py  sub_agent.py
src/agentkit/plugins/: __init__.py  manager.py
src/agentkit/session/: __init__.py  models.py  store.py
src/agentkit/skills/: __init__.py  executor.py  loader.py  models.py
src/agentkit/tools/: manager.py  mcp_client.py  native.py  schema.py
src/agentkit/tracing/: __init__.py  collector.py  (+1 more)
tests/: conftest.py  test_config.py  test_context.py  test_cron.py  test_dashboard.py  test_i18n.py  test_media.py  test_memory.py  test_model_client.py  test_model_types.py  test_orchestration.py  test_session.py  test_skills.py  test_tools.py  test_tracing.py  test_tui.py
(+19 files in other folders)
